k8s/network-policies/allow-services.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns
  namespace: cloudcart

spec:
  podSelector: {}

  policyTypes:
  - Egress

  egress:
  - to:
    - ipBlock:
        cidr: 10.244.120.85/32
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
